--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="profile_action_save">Save</string>
     <string name="profile_accept_verification">Accept</string>
     <string name="profile_decline_verification">Decline</string>
+    <string name="profile_verifications_title">Recruit account verifications</string>
 
 
     <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
