Group detail: show member list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="group_add">Add</string>
     <string name="group_detail_tab">Group details</string>
     <string name="group_chat_tab">Chat</string>
+    <string name="group_members">Members</string>
 
     <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
     <string name="facebook_application_id" translatable="false">1627493943938849</string>
