--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."</string>
+        completions."
+    </string>
     <string name="action_sign_out">Sign out</string>
     <string name="msg_not_verified">Your account has not been verified yet.</string>
     <string name="title_not_verified">Not verified</string>
