--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="recruit_name">Recruit name</string>
     <string name="recruit_selection_invalid">Please select a recruit</string>
     <string name="recruit_invitations">Invitations</string>
+    <string name="recruit_deleted_from_group">You have been removed from this group</string>
 
     <!-- Strings related to groups -->
     <string name="groups_user_groups">My groups</string>
@@ -57,6 +58,8 @@
     <string name="group_add_member_title">Add group member</string>
     <string name="group_add_member_already_member">This recruit is already in the group.</string>
     <string name="group_member_added">Recruit added to group</string>
+    <string name="group_member_invited">Recruit invited to group</string>
+    <string name="group_member_already_invited">Recruit already invited to group</string>
     <string name="group_member_role_leader">Leader</string>
     <string name="group_member_role_member">Member</string>
     <string name="group_member_invitation_pending">Pending</string>
