--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,7 +103,7 @@
     <string name="group_delete_success">Group deleted</string>
     <string name="group_delete_failure">Error while deleting group. Try again or contact a developer</string>
     <string name="group_inactive_title">INACTIVE</string>
-    <string name="group_inactivate_title">Inactivate</string>
+    <string name="group_inactivate_title">Inactivate group</string>
     <string name="group_inactivate_success">Inactivated group</string>
     <string name="group_inactivate_failure">Error inactivating group</string>
     <string name="group_inactivate_message">Are you sure you want to inactivate %1$s?</string>
